# RaspberryPi

./: .gitmodules  README.md
rpi_dummy/: main.py
rpi_dump/: Cargo.toml  config.json  usb
rpi_dump/src/: adsb.rs  main.rs  uart.rs
rpi_setup/: README_onrpi  bootscript.sh  bootscript1.sh  dietpi  fishconfig  rootprompt  rpi  setup.sh  userprompt
test_sdr/: config.json
test_sdr/src/: adsb.rs  main.rs  uart.rs
test_sdr_1/: Cargo.toml
test_sdr_1/src/: adsb.rs  config.rs
