[package]
name = "rpi_dump"
version = "0.1.0"
authors = ["22h39 <17597456+22h39@users.noreply.github.com>"]
edition = "2018"


[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
serialport = "4.0.0"
serde_json = "1.0"
libudev-sys = "0.1.4"
serde = { version = "1.0.118", features = ["derive"] }
stoppable_thread = "0.2.1"
spmc = "0.3.0"
